--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -47,10 +48,12 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
-"react": "^18.2.0",
+    "nodemailer": "^7.0.5",
+    "react": "^18.2.0",
     "react-day-picker": "9.8.0",
-"react-dom": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
